# netharn

./: .coveragerc  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  README.rst  appveyor.yml  doctests.sh  examples  gpu_setup.py  publish.sh  pyproject.toml  pytest.ini  regen_init.py  regen_init.sh  requirements.txt  run_developer_setup.sh  run_doctests.sh  run_tests.py  setup.py  skbuild_pr.py  super_setup.py  todo.md  whatsnew.md
_build_wheel/: Dockerfile  build-wheels.sh  pypi_build.sh
analytic/: analytic_for.py  output_shape_for.py  receptive_field_for.py
dev/: _devcheck_optim_without_bias_decay.py  check_pypi_versions.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_key.pgp.enc  cifar_notes.txt  coco.py  data_parallel_mwe.py  debug_memory.py  debug_minst.py  debug_optimizer.py  ggr_matching.py  gpg_owner_trust.enc  imagenet.py  list_deployed.py  manage_snapshots.py  mnist_matching.py  symcheck_ewma.py  yolo_comments.txt
dev/bench/: bench_dict_lookup.py  functional_speed.py  test_pd_column_mean.py
dev/junk/: toggle_dynamic.sh
dev/junk/roi_pooling/: __init__.py
docs/: bugs.md  todo.txt  yolo_notes.py
examples/: cifar.py  ggr2_matching.py  ggr_matching.py  grab_camvid.py  grab_voc.py  ibeis_utils.py  imagenet.py  mnist.py  mnist_matching.py  object_detection.py  segmentation.py  siam_ibeis.py  sseg_camvid.py  yolo_voc.py
examples/tests/: expt_cifar.py  test_yolo.py  test_yolo2.py  voc_eval_orig.py
netharn/: __init__.py  analytic_for.py  api.py  collate.py  device.py  exceptions.py  fit_harn.py  folders.py  hidden_shapes_for.py  hyperparams.py  mixins.py  monitor.py  output_shape_for.py  receptive_field_for.py  yolo_voc.py
netharn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
netharn/analytic/: analytic_for.py  output_shape_for.py  receptive_field_for.py
netharn/backbones/: efficentnet.py  efficientnet.py
netharn/criterions/: __init__.py  contrastive_loss.py  focal.py  triplet.py
netharn/data/: __init__.py  base.py  batch_samplers.py  channel_spec.py  coco_api.py  collate.py  data_containers.py  grab_camvid.py  grab_voc.py  lsuv.py  toydata.py  voc.py
netharn/data/transforms/: __init__.py  augmenter_base.py  augmenters.py
netharn/examples/: __main__.py  cifar.py  classification.py  example_test.py  mnist.py  object_detection.py  segmentation.py  siam_ibeis.py  sseg_camvid.py  style_transfer.py  style_transfer_orig.py  yolo2_voc.py  yolo_voc.py
netharn/examples/tests/: expt_cifar.py  test_yolo.py  voc_eval_orig.py
netharn/export/: __init__.py  closer.py  deployer.py  exporter.py  extractor.py
netharn/initializers/: __init__.py  _nx_extensions.py  _nx_extensions_cython_backend.pyx  _nx_junk.py  _other.py  balanced_sequence.py  base.py  bseq2.py  core.py  functional.py  lsuv.py  nninit_base.py  nninit_core.py  pretrained.py
netharn/initializers/_nx_ext/: __init__.py  _bseq_expt.py  balanced_sequence.py  balanced_sequence_cython.cpp  balanced_sequence_cython.html  balanced_sequence_cython.pyx  benchmarks.py  demodata.py  path_embedding.py  tree_embedding.py
netharn/initializers/_nx_ext/tests/: test_balanced_sequence.py  test_path_embedding.py  test_tree_embedding.py
netharn/layers/: __init__.py  common.py  conv_norm.py  gauss.py  norm.py  perceptron.py  rectify.py  reshape.py  swish.py
netharn/layers/reorg/: reorg_layer.py  reorg_layer_c.py
netharn/layers/roi_pooling/: __init__.py  roi_pool_c.py
netharn/metrics/: __init__.py  _devcheck_detmetrics.py  assignment.py  clf_report.py  confusion_vectors.py  detect_metrics.py  detections.py  drawing.py  functional.py  sklearn_alts.py  voc_metrics.py
netharn/models/: __init__.py  classical.py  deeplab_v3.py  densenet.py  descriptor_network.py  dual_path_net.py  efficientnet.py  psp.py  resnet.py  se_resnet.py  segnet.py  toynet.py  unet.py
netharn/models/_faster_rcnn/fpn/: __init__.py  fpn_new.py
netharn/models/_faster_rcnn/rpn/: anchor_target_layer_fpn.py  generate_anchors.py  generate_anchors.py.bak  proposal_target_layer.py  rpn_fpn.py
netharn/models/_faster_rcnn/utils/: __init__.py  config.py
netharn/models/faster_rcnn/: __init__.py
netharn/models/faster_rcnn/fpn/: fpn.py  resnet.py
netharn/models/faster_rcnn/roi_pooling/: build.py
netharn/models/faster_rcnn/rpn/: __init__.py  bbox_transform.py  generate_anchors.py  proposal_layer_fpn.py
netharn/models/faster_rcnn/utils/: __init__.py  blob.py  net_utils.py
netharn/models/yolo2/: light_postproc.py  light_region_loss.py  light_yolo.py  multiscale_batch_sampler.py  region_loss2.py  yolo2.py
netharn/models/yolo2/tests/: test_region_loss.py
netharn/nninit/: __init__.py  _other.py  base.py  core.py  lsuv.py
netharn/optimizers/: __init__.py  adamw.py
netharn/plots/: weight_scatter.py
netharn/prefit/: lr_tests.py
netharn/schedulers/: __init__.py  core.py  listed.py  scheduler_redesign.py
netharn/util/: __init__.py  _box_benchmarks.py  cython_boxes.pyx  imutil.py  layer_rotation.py  mpl_3d.py  mpl_multiplot.py  mplutil.py  profiler.py  util_averages.py  util_boxes.py  util_cachestamp.py  util_cv2.py  util_dataframe.py  util_demodata.py  util_filesys.py  util_fname.py  util_groups.py  util_idstr.py  util_inspect.py  util_io.py  util_iter.py  util_json.py  util_misc.py  util_nms.py  util_numpy.py  util_random.py  util_resources.py  util_slider.py  util_slider_dep.py  util_subextreme.py  util_tensorboard.py  util_torch.py  util_zip.py
netharn/util/_boxes_backend/: CMakeLists.txt  _setup_ext.py  cython_boxes.pyx
netharn/util/_nms_backend/: CMakeLists.txt  cpu_nms.pyx  gpu_nms.pyx  nms_kernel.cu  py_nms.py  torch_nms.py
netharn/util/nms/: __init__.py  cpu_nms.pyx  gpu_nms.cpp  gpu_nms.hpp  gpu_nms.pyx  nms_core.py  nms_kernel.cu  py_nms.py  torch_nms.py
nnharn/: fit_harness.py  torch_utils.py  yolo_voc.py
requirements/: optional.txt  problematic.txt  runtime.txt  super_setup.txt  tests.txt
tests/: test_iter_idx.py  test_light_region_loss.py  test_lr.py  test_receptive_feild.py  test_restart_lr.py  test_run_sequence.py  test_yolo_lr.py
tools/: manage_snapshots.py
(+3 files in other folders)
